jss-compiler/tests/semantic_errors/invalid_this.jss
function void main() {
    this.x = 10;
}
